--- a/public/contact/index.html
+++ b/public/contact/index.html
@@ -69,7 +69,7 @@
 <div id="menu">
 
   
-  <a class="pure-menu-heading brand" href="/">My Site</a>
+  <a class="pure-menu-heading brand" href="/">Perach</a>
 
 
   <div class="pure-menu">
