--- a/public/index.html
+++ b/public/index.html
@@ -233,7 +233,7 @@
 
 <div class="header">
   <h1>Omer Perach</h1>
-  <h2>Content I like</h2>
+  <h2>R, Plant Science, Precision Agriculture</h2>
 </div>
 
 <div class="content">
