--- a/public/about/index.html
+++ b/public/about/index.html
@@ -233,6 +233,12 @@
 <p>In the last four years, step by step, I am learning and studying R for data visualiztion, statistics, supervised learning etc.</p>
 <p>This site is the place I decided to show thw world how all this learning getting a shape and format.</p>
 <p>Now the site is empty, but I will work hard to fill it with planty of content that interest me, I hope you will enjoy it.</p>
+<h5 id="links-to-my-r-shiny-apps">Links to my R shiny apps</h5>
+<ol>
+<li>[Machine Learning]  (<a href="https://omerperach.shinyapps.io/macinelearning/">https://omerperach.shinyapps.io/macinelearning/</a>)</li>
+<li>[Spatial Data demo] ( <a href="https://omerperach.shinyapps.io/yazamut01/">https://omerperach.shinyapps.io/yazamut01/</a>)</li>
+<li>[Business Financial] (<a href="https://omerperach.shinyapps.io/business_generalize/">https://omerperach.shinyapps.io/business_generalize/</a>)</li>
+</ol>
 <p>Yours,</p>
 <p>Omer</p>
 
