--- a/public/about/index.html
+++ b/public/about/index.html
@@ -228,11 +228,14 @@
   <h2>About me and this site</h2>
 </div>
 <div class="content">
-  <p>Hi, my name is Omer Perach and this site serve as my play ground.</p>
-<p>Every once in a while you need to feed your couriosity.</p>
-<p>In the last four years, step by step, I am learning and studying R for data visualiztion, statistics, supervised learning etc.</p>
-<p>This site is the place I decided to show thw world how all this learning getting a shape and format.</p>
-<p>Now the site is empty, but I will work hard to fill it with planty of content that interest me, I hope you will enjoy it.</p>
+  <p>Hi, my name is Omer Perach and this site serves as my play ground.</p>
+<p>Every once in a while you need to feed your curiosity and challenge your mind.</p>
+<p>In the last four years, step by step, I am learning and studying R for data visualization, statistics, supervised learning etc.</p>
+<p>You are welcome to walk around and read, I would be happy if you will find things that could ignite your curiosity.</p>
+<p>I will finish with the following quoting by Albert Einstien</p>
+<p><strong>&ldquo;Imagination is everything. It is the preview of life&rsquo;s coming attraction&rdquo;</strong></p>
+<p>and</p>
+<p><strong>“Imagination is more important than knowledge. For knowledge is limited to all we now know and understand, while imagination embraces the entire world, and all there ever will be to know and understand.”</strong></p>
 <h5 id="links-to-my-r-shiny-apps">Links to my R shiny apps</h5>
 <ol>
 <li>[Machine Learning]  (<a href="https://omerperach.shinyapps.io/macinelearning/">https://omerperach.shinyapps.io/macinelearning/</a>)</li>
