--- a/public/about/index.html
+++ b/public/about/index.html
@@ -238,9 +238,10 @@
 <p><strong>“Imagination is more important than knowledge. For knowledge is limited to all we now know and understand, while imagination embraces the entire world, and all there ever will be to know and understand.”</strong></p>
 <h5 id="links-to-my-r-shiny-apps">Links to my R shiny apps</h5>
 <ol>
-<li>[Machine Learning]  (<a href="https://omerperach.shinyapps.io/macinelearning/">https://omerperach.shinyapps.io/macinelearning/</a>)</li>
-<li>[Spatial Data demo] ( <a href="https://omerperach.shinyapps.io/yazamut01/">https://omerperach.shinyapps.io/yazamut01/</a>)</li>
-<li>[Business Financial] (<a href="https://omerperach.shinyapps.io/business_generalize/">https://omerperach.shinyapps.io/business_generalize/</a>)</li>
+<li><a href="https://omerperach.shinyapps.io/macinelearning/">Machine Learning</a></li>
+<li><a href="https://omerperach.shinyapps.io/yazamut01/">Spatial Data demo</a></li>
+<li><a href="https://omerperach.shinyapps.io/business_generalize/">Business Financial</a></li>
+<li><a href="https://omerperach.shinyapps.io/prototype_0/">Rice Experiment</a></li>
 </ol>
 <p>Yours,</p>
 <p>Omer</p>
