--- a/content/about.html
+++ b/content/about.html
@@ -379,9 +379,10 @@ summary {
 <div id="links-to-my-r-shiny-apps" class="section level5">
 <h5>Links to my R shiny apps</h5>
 <ol style="list-style-type: decimal">
-<li>[Machine Learning] (<a href="https://omerperach.shinyapps.io/macinelearning/" class="uri">https://omerperach.shinyapps.io/macinelearning/</a>)</li>
-<li>[Spatial Data demo] ( <a href="https://omerperach.shinyapps.io/yazamut01/" class="uri">https://omerperach.shinyapps.io/yazamut01/</a>)</li>
-<li>[Business Financial] (<a href="https://omerperach.shinyapps.io/business_generalize/" class="uri">https://omerperach.shinyapps.io/business_generalize/</a>)</li>
+<li><a href="https://omerperach.shinyapps.io/macinelearning/">Machine Learning</a></li>
+<li><a href="https://omerperach.shinyapps.io/yazamut01/">Spatial Data demo</a></li>
+<li><a href="https://omerperach.shinyapps.io/business_generalize/">Business Financial</a></li>
+<li><a href="https://omerperach.shinyapps.io/prototype_0/">Rice Experiment</a></li>
 </ol>
 <p>Yours,</p>
 <p>Omer</p>
