--- a/public/about.utf8/index.html
+++ b/public/about.utf8/index.html
@@ -228,7 +228,8 @@
   <h2>About me and this site</h2>
 </div>
 <div class="content">
-  <p>Hi, my name is Omer Perach and this site serves as my play ground.</p>
+  <p><img src="my_pic.jpg" alt="my picture"></p>
+<p>Hi, my name is Omer Perach and this site serves as my play ground.</p>
 <p>Every once in a while you need to feed your curiosity and challenge your mind.</p>
 <p>In the last four years, step by step, I am learning and studying R for data visualization, statistics, supervised learning etc.</p>
 <p>You are welcome to walk around and read, I would be happy if you will find things that could ignite your curiosity.</p>
@@ -238,9 +239,10 @@
 <p><strong>“Imagination is more important than knowledge. For knowledge is limited to all we now know and understand, while imagination embraces the entire world, and all there ever will be to know and understand.”</strong></p>
 <h5 id="links-to-my-r-shiny-apps">Links to my R shiny apps</h5>
 <ol>
-<li>[Machine Learning]  (<a href="https://omerperach.shinyapps.io/macinelearning/">https://omerperach.shinyapps.io/macinelearning/</a>)</li>
-<li>[Spatial Data demo] ( <a href="https://omerperach.shinyapps.io/yazamut01/">https://omerperach.shinyapps.io/yazamut01/</a>)</li>
-<li>[Business Financial] (<a href="https://omerperach.shinyapps.io/business_generalize/">https://omerperach.shinyapps.io/business_generalize/</a>)</li>
+<li><a href="https://omerperach.shinyapps.io/macinelearning/">Machine Learning</a></li>
+<li><a href="https://omerperach.shinyapps.io/yazamut01/">Spatial Data demo</a></li>
+<li><a href="https://omerperach.shinyapps.io/business_generalize/">Business Financial</a></li>
+<li><a href="https://omerperach.shinyapps.io/prototype_0/">Rice Experiment</a></li>
 </ol>
 <p>Yours,</p>
 <p>Omer</p>
