--- a/public/about/index.html
+++ b/public/about/index.html
@@ -228,8 +228,7 @@
   <h2>About me and this site</h2>
 </div>
 <div class="content">
-  <p><img src="/./about_files/IMG_0503.jpg" alt="">
-Hi, my name is Omer Perach and this site serves as my play ground.</p>
+  <p>Hi, my name is Omer Perach and this site serves as my play ground.</p>
 <p>Every once in a while you need to feed your curiosity and challenge your mind.</p>
 <p>In the last four years, step by step, I am learning and studying R for data visualization, statistics, supervised learning etc.</p>
 <p>You are welcome to walk around and read, I would be happy if you will find things that could ignite your curiosity.</p>
